<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.bjtu.mintfit.ui.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_content_description"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#6495ED"
            android:textSize="16sp"
            android:text="@string/app_name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_phone_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/phone_content_description"
                app:srcCompat="@drawable/ic_mail"/>

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:hint="@string/phone_content_description"
                android:background="#F8F8F8"
                android:inputType="textEmailAddress" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_phone_background">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/password_content_description"
                app:srcCompat="@drawable/ic_password"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:hint="@string/password_content_description"
                android:background="#F8F8F8"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="240dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_login"
            android:onClick="login"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="240dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:textAlignment="center"
            android:onClick="onRegisterClick"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

</LinearLayout>
